# agent-consent-protocol

./: .env.example  .gitignore  .prettierrc  .ruff.toml  README.md  STATUS.md  pyproject.toml
adrs/: 001-usage-policy-as-agent-card-extension.md  002-proof-of-adherence-over-proof-of-acceptance.md
demo/: README.md  callee_agent.py  caller_agent.py
docs/: specification.md
extensions/: README.md
extensions/audit-projection/: README.md  STATUS.md  consent.audit.proto  motivation.md
extensions/audit-projection/v1/: SPEC.md  manifest.json
extensions/category-preferences/: README.md  STATUS.md  consent.categories.proto  motivation.md
extensions/category-preferences/v1/: SPEC.md  manifest.json
extensions/governance-tiering/: README.md  STATUS.md  consent.governance.proto  motivation.md
extensions/governance-tiering/v1/: SPEC.md  manifest.json
extensions/regulatory-context/: README.md  STATUS.md  consent.regulatory.proto  motivation.md
extensions/regulatory-context/v1/: SPEC.md  manifest.json
samples/python/: adherence_event_example.json  callee_agent.json  consent_record_example.json  usage_policy.json
specification/: ConsentLifecycle.cfg  ConsentLifecycle.tla  consent.proto
tests/: bench_validators.py  conftest.py  test_ag_ui_binding.py  test_chain.py  test_extension_uris.py  test_hash.py  test_trail.py
tests/extensions/: test_audit_projection.py  test_category_preferences.py  test_governance_tiering.py  test_regulatory_context.py
tests/mcp_server/: test_server_stdio.py  test_tools.py
v1/: README.md  SPEC.md  manifest.json
(+36 files in other folders)
